# stagma

./: CMakeLists.txt  README.md  ast.h  build.sh  parser.c  parser.h  runtime.c  runtime.h  stack.c  stack.h  stagmac.c  stagmar.c  statement.h
asm-snippets/: arithmetic.s  controlflow.s  io.s  stackmanipulation.s
doc/: language-spec.md
example/: test.sm
samples/: 1-comment.sm  2-io.sm  3-stack-manipulation.sm  4-arithmetic.sm  5-1-controlflow-if.sm  5-2-controlflow-if-else.sm  5-3-controlflow-nested-if-else.sm  5-4-controlflow-while.sm  5-5-controlflow-exit.sm  6-args.sm  factorial.sm  fibonacci.sm  hello_world.sm  print-args.sm  print-n-letters.sm
src/: ast.c  ast.h  compiler.c  compiler.h  dynamic_array.h  dynamic_array.test.c  info.c  info.h  interpreter.c  interpreter.h  io.c  io.h  parser.c  parser.h  repl.c  repl.h  runtime.c  runtime.h  stagma.c  stagmac.c
